--- a/Remindr/res/values/strings.xml
+++ b/Remindr/res/values/strings.xml
@@ -3,6 +3,6 @@
 
     <string name="app_name">Remindr</string>
     <string name="action_settings">Settings</string>
-    <string name="hello_world">Hello world!</string>
+    <string name="about">Remindr is a reminders app that reminds you on events based on your location, as well as other factors.</string>
 
 </resources>
