--- a/Remindr/res/values/strings.xml
+++ b/Remindr/res/values/strings.xml
@@ -4,5 +4,9 @@
     <string name="app_name">Remindr</string>
     <string name="action_settings">Settings</string>
     <string name="about">Remindr is a reminders app that reminds you on events based on your location, as well as other factors.</string>
+    <string name="title_activity_remindr">Remindr</string>
+    <string name="title_section1">Section 1</string>
+    <string name="title_section2">Section 2</string>
+    <string name="title_section3">Section 3</string>
 
 </resources>
