--- a/Remindr/res/values/strings.xml
+++ b/Remindr/res/values/strings.xml
@@ -1,12 +1,12 @@
-<?xml version="1.0" encoding="utf-8"?>
+git@github.com:justinyangusa/sf-codeday.gitgit@github.com:justinyangusa/sf-codeday.git<?xml version="1.0" encoding="utf-8"?>
 <resources>
 
     <string name="app_name">Remindr</string>
     <string name="action_settings">Settings</string>
     <string name="about">Remindr is a reminders app that reminds you on events based on your location, as well as other factors.</string>
     <string name="title_activity_remindr">Remindr</string>
-    <string name="title_section1">Section 1</string>
-    <string name="title_section2">Section 2</string>
-    <string name="title_section3">Section 3</string>
+    <string name="title_section1">Current Reminders</string>
+    <string name="title_section2">Close Reminders</string>
+    <string name="title_section3">All Reminders</string>
 
 </resources>
