--- a/Remindr/res/values/strings.xml
+++ b/Remindr/res/values/strings.xml
@@ -1,4 +1,4 @@
-git@github.com:justinyangusa/sf-codeday.gitgit@github.com:justinyangusa/sf-codeday.git<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
 
     <string name="app_name">Remindr</string>
